bug: safari browser is off; fixed: corrected safari alignments to maintain similarity btw cross-browsers layout

--- a/src/style/_mobile.scss
+++ b/src/style/_mobile.scss
@@ -82,7 +82,7 @@
   }
 
   .main {
-    height: 50%;
+    height: auto;
     margin-bottom: 30px;
     width: 95%;
     max-width: 95%;
